@@ -27,6 +27,7 @@ Other information:
 Changes since the last public release (1.5.6):
 
 Version 1.5.7 [November 3, 2011]
+  Added support for ARM processor (Mans Rullgard)
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net:
 (subscription required; visit
