@@ -353,5 +353,8 @@ struct png_struct_def
 
 /* New member added in libpng-1.5.6 */
    png_bytep big_prev_row;
+
+   void (*read_filter[PNG_FILTER_VALUE_LAST-1])(png_row_infop row_info,
+      png_bytep row, png_const_bytep prev_row);
 };
 #endif /* PNGSTRUCT_H */
